--- a/art12/templates/config.html
+++ b/art12/templates/config.html
@@ -12,7 +12,12 @@
   {% from 'common/_macros.html' import render_field_with_errors %}
   <h1>Configuration</h1>
 
-  <form id="config-form" class="form box box-small inline-block" name="config" method="post">
+  <form id="config-form" class="form box box-small inline-block" name="config"
+        method="post">
+
+    {% if form.csrf_token.errors %}
+      <div class="warning">You have submitted an invalid CSRF token</div>
+    {% endif %}
 
     {{ form.csrf_token() }}
 
