--- a/eea_integration/layout/templates/layout_default.html
+++ b/eea_integration/layout/templates/layout_default.html
@@ -13,7 +13,7 @@
       </h1>
 
       <div class="login">
-        {% if current_user.is_authenticated() %}
+        {% if current_user.is_authenticated %}
           <a id="loginlink" href="{{ url_for('views.logout') }}">Log out</a>
           <span id="profilelink">You are logged in as <b>{{ current_user.id }}</b></span>
         {% else %}
